--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <img src="https://www.kurukshetracodingschool.com/logo.png" alt="">
             <div class="part2">
-                    <a href="">Home</a>
-                    <a href="">About</a>
-                    <a href="">Contact</a>
-                    <a href="">Sing In</a>
+                    <a  href="">Home</a>
+                    <a  href="">About</a>
+                    <a  href="">Contact</a>
+                    <a  href="">Sing In</a>
             </div>
         </nav>
         <section>
@@ -27,5 +27,7 @@
         </section>
 
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 </html>
